# OS-Assigments

./: .gitignore  README.md
device_mgmt/: CMakeLists.txt  README.html  README.md  sample.html  sample.md  status.html  status.md
device_mgmt/src/: main.cc  mgmt.h
device_mgmt/src/basic/list/: list.h  list_clear.h  list_find.h  list_header.h  list_init.h  list_insert.h  list_node.h  list_operator.h  list_remove.h  list_sort.h
device_mgmt/src/basic/node/: node.h
device_mgmt/src/basic/nodes/: nodes.h
device_mgmt/src/basic/pcb/: pcb.h
device_mgmt/src/basic/queue/: queue.h
file_disk_mgmt/: CMakeLists.txt  sample.md
file_disk_mgmt/data/: virtual.disk
file_disk_mgmt/src/: main.cc  mgmt.h
file_disk_mgmt/src/basic/block/: block.h
file_disk_mgmt/src/basic/fcb/: fcb.h
file_disk_mgmt/src/utlis/: argument_parser.h  convert.h  curr_time.h  exists.h  log.h  split.h  utlis.h
paging_mgmt/: CMakeLists.txt  PreLoad.cmake  README.md
paging_mgmt/src/: mgmt.cc  mgmt.h
paging_mgmt/src/basic/bitmap/: bitmap.cc  bitmap.h
paging_mgmt/src/basic/list/: list.h  list_find.h  list_header.h  list_init.h  list_node.h  list_operator.h  list_remove.h  list_sort.h
paging_mgmt/src/basic/pagetable/: page_table.h
paging_mgmt/src/basic/pcb/: pcb.h
paging_mgmt/src/basic/queue/: queue.h
process_control/: CMakeLists.txt  README.md
process_control/log/: process.ERROR  process.INFO  process.WARNING  process.m0dulo.m0dulo.log.INFO.20191111-103904.570  process.m0dulo.m0dulo.log.WARNING.20191111-103905.570
process_control/src/: .process.cc.swp  process.cc  process.h
process_control/src/basic/list/: list.h  list_clear.h  list_find.h  list_header.h  list_init.h  list_insert.h  list_node.h  list_operator.h  list_remove.h  list_sort.h
process_control/src/basic/memory/: mem_node.h  mem_node_operator.h  memory_header.h
process_control/src/basic/pcb/: pcb.h  pcb_header.h  pcb_operator.h
process_control/src/list/: list.h  list_find.h  list_init.h  list_insert.h  list_node.h
process_control/src/pcb/: pcb.h
process_sched/: CMakeLists.txt
process_sched/data/: 1.txt  mf.txt  pri.txt  test.toml  test.txt
process_sched/src/: main.cc  process_sched.h
process_sched/src/banker/: banker.cc
process_sched/src/basic/: process_sched.h
process_sched/src/basic/list/: list.h  list_clear.h  list_find.h  list_init.h  list_remove.h  list_sort.h
process_sched/src/basic/pcb/: pcb.h
process_sched/src/sheduling/: main.cc  process_sched.cc  process_sched.h
process_sched/src/utlis/: argument_parser.h  convert.h  curr_time.h  exists.h  ini_reader.h  split.h  utlis.h
