cmake_minimum_required(VERSION 3.8)
project("Device_Mgmt")
# find_package(Threads)
set(CMAKE_BUILD_TYPE Debug)
set (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
if(CMAKE_BUILD_TYPE MATCHES Debug)
    SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -g -w -msse3 -funroll-loops  -std=c++11 -O0 -pg" )
else()
    SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -fPIC -funroll-loops -w -std=c++11 -Ofast -march=native" )
endif()
include_directories(src)
AUX_SOURCE_DIRECTORY(src SRCS)
add_executable (device_mgmt ${SRCS})
# aux_source_directory(src/basic/bitmap DIR_BITMAP)
# add_library (BitMap ${DIR_BITMAP})
# target_link_libraries(paging_mgmt BitMap)
# target_link_libraries(device_mgmt libglog.a ${CMAKE_THREAD_LIBS_INIT})
include_directories(src/basic/list)
# include_directories(src/basic/bitmap)
include_directories(src/third_party/Argument_helper)
include_directories(src/basic/queue)
# include_directories(src/basic/memory)
include_directories(src/basic/pcb)
# include_directories(src/basic/pagetable)
include_directories(src/basic/node)
