cmake_minimum_required(VERSION 3.8)
project("Process_Sched")
set(CMAKE_BUILD_TYPE Debug)
set (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

if(CMAKE_BUILD_TYPE MATCHES Debug)
    SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -g -w -msse3 -funroll-loops  -std=c++11 -O0 -pg" )
else()
    SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -fPIC -funroll-loops -w -std=c++11 -Ofast -march=native" )
endif()
include_directories(src)
AUX_SOURCE_DIRECTORY(src SRCS)
add_executable (process_sched ${SRCS})
include_directories(src/utlis)
include_directories(src/basic/pcb)
include_directories(src/basic/list)
include_directories(src/basic/queue)
include_directories(third_party/cpptoml)